--- a/dashboard.html
+++ b/dashboard.html
@@ -318,12 +318,12 @@
                 </a>
                 <!-- Friends -->
                 <a href="friends.html" class="flex flex-col items-center text-black-600 hover:text-blue-500">
-                   <i class="fa fa-user-plus" aria-hidden="true"></i> <!-- Arrow up icon -->
+                   <i class="fas fa-user-friends"></i> <!-- Arrow up icon -->
                     <span class="text-xs">Friends</span>
                 </a>
                 <!-- News -->
-                <a href="news.html" class="flex flex-col items-center text-blue-600 hover:text-blue-500">
-                    <i class="fa fa-newspaper-o" aria-hidden="true"></i>
+                <a href="news.html" class="flex flex-col items-center text-black-600 hover:text-blue-500">
+                    <i class="fas fa-newspaper"></i>
                     <span class="text-xs">News</span>
                 </a>
             </div>
