--- a/mines.html
+++ b/mines.html
@@ -71,41 +71,42 @@
     <div id="toast-container" class="fixed top-4 right-4 space-y-2 z-50"></div>
 
     <!-- Sticky Footer -->
-    <footer class="bg-white shadow-inner w-full fixed bottom-0">
-        <div class="flex justify-around py-2 border-t">
-            <!-- Investing -->
-            <a href="investing.html" class="flex flex-col items-center text-black-600 hover:text-blue-500">
-                <i class="fas fa-chart-line text-xl"></i>
-                <span class="text-xs">Investing</span>
-            </a>
-            <!-- Mines Gambling -->
-            <a href="#mines-gambling" class="flex flex-col items-center text-blue-600 hover:text-blue-500">
-                <i class="fas fa-bomb text-xl"></i> <!-- Icon of a bomb to represent Mines Gambling -->
-                <span class="text-xs">Mines</span>
-            </a>
+    <!-- Sticky Footer -->
+        <footer class="bg-white shadow-inner w-full fixed bottom-0">
+            <div class="flex justify-around py-2 border-t">
+                <!-- Investing -->
+                <a href="investing.html" class="flex flex-col items-center text-black-600 hover:text-blue-500">
+                    <i class="fas fa-chart-line text-xl"></i>
+                    <span class="text-xs">Investing</span>
+                </a>
+                <!-- Mines Gambling -->
+                <a href="mines.html" class="flex flex-col items-center text-black-600 hover:text-blue-500">
+                    <i class="fas fa-bomb text-xl"></i> <!-- Icon of a bomb to represent Mines Gambling -->
+                    <span class="text-xs">Mines</span>
+                </a>
 
-            <!-- Earnings -->
-            <a href="dashboard.html" class="flex flex-col items-center text-black-600 hover:text-blue-500">
-                <i class="fas fa-dollar-sign text-xl"></i>
-                <span class="text-xs">Earnings</span>
-            </a>
-            <!-- Tasks -->
-            <a href="tasks.html" class="flex flex-col items-center text-black-600 hover:text-blue-500">
-                <i class="fas fa-chart-line text-xl"></i>
-                <span class="text-xs">Tasks</span>
-            </a>
-            <!-- Limbo -->
-            <a href="limbo.html" class="flex flex-col items-center text-black-600 hover:text-blue-500">
-                <i class="fas fa-arrow-up text-xl"></i> <!-- Arrow up icon -->
-                <span class="text-xs">Limbo</span>
-            </a>
-            <!-- Profile -->
-            <a href="profile.html" class="flex flex-col items-center text-black-600 hover:text-blue-500">
-                <i class="fas fa-user text-xl"></i>
-                <span class="text-xs">Profile</span>
-            </a>
-        </div>
-    </footer>
+                <!-- Earnings -->
+                <a href="dashboard.html" class="flex flex-col items-center text-blue-600 hover:text-blue-500">
+                    <i class="fas fa-dollar-sign text-xl"></i>
+                    <span class="text-xs">Earnings</span>
+                </a>
+                <!-- Tasks -->
+                <a href="tasks.html" class="flex flex-col items-center text-black-600 hover:text-blue-500">
+                    <i class="fas fa-chart-line text-xl"></i>
+                    <span class="text-xs">Tasks</span>
+                </a>
+                <!-- Friends -->
+                <a href="friends.html" class="flex flex-col items-center text-black-600 hover:text-blue-500">
+                   <i class="fas fa-user-friends text-xl"></i> <!-- Arrow up icon -->
+                    <span class="text-xs">Friends</span>
+                </a>
+                <!-- News -->
+                <a href="news.html" class="flex flex-col items-center text-black-600 hover:text-blue-500">
+                    <i class="fas fa-newspaper text-xl"></i>
+                    <span class="text-xs">News</span>
+                </a>
+            </div>
+        </footer>
     <!-- Bagian yang relevan pada script -->
 <script>
     document.addEventListener('DOMContentLoaded', () => {
@@ -124,7 +125,7 @@
         const profitElement = document.getElementById('profit');
 
         let grid = [];
-        let mines = [];
+        let mines = 3;
         let betAmount = 0;
         let isGameActive = false;
         let tilesClicked = 0;
