--- a/news.html
+++ b/news.html
@@ -120,7 +120,7 @@
   "feedMode": "all_symbols",
   "isTransparent": false,
   "displayMode": "regular",
-  "width": 370,
+  "width": 350,
   "height": 750,
   "colorTheme": "light",
   "locale": "en"
@@ -144,6 +144,7 @@
 
         
 
+        <!-- Sticky Footer -->
         <!-- Sticky Footer -->
         <footer class="bg-white shadow-inner w-full fixed bottom-0">
             <div class="flex justify-around py-2 border-t">
@@ -170,12 +171,12 @@
                 </a>
                 <!-- Friends -->
                 <a href="friends.html" class="flex flex-col items-center text-black-600 hover:text-blue-500">
-                   <i class="fas fa-user-friends"></i> <!-- Arrow up icon -->
+                   <i class="fas fa-user-friends text-xl"></i> <!-- Arrow up icon -->
                     <span class="text-xs">Friends</span>
                 </a>
                 <!-- News -->
-                <a href="news.html" class="flex flex-col items-center text-blue-600 hover:text-blue-500">
-                    <i class="fas fa-newspaper"></i>
+                <a href="news.html" class="flex flex-col items-center text-black-600 hover:text-blue-500">
+                    <i class="fas fa-newspaper text-xl"></i>
                     <span class="text-xs">News</span>
                 </a>
             </div>
