--- a/news.html
+++ b/news.html
@@ -120,7 +120,7 @@
   "feedMode": "all_symbols",
   "isTransparent": false,
   "displayMode": "regular",
-  "width": 350,
+  "width": 355,
   "height": 750,
   "colorTheme": "light",
   "locale": "en"
@@ -170,7 +170,7 @@
                     <span class="text-xs">Tasks</span>
                 </a>
                 <!-- Friends -->
-                <a href="friends.html" class="flex flex-col items-center text-black-600 hover:text-blue-500">
+                <a href="#" class="flex flex-col items-center text-black-600 hover:text-blue-500">
                    <i class="fas fa-user-friends text-xl"></i> <!-- Arrow up icon -->
                     <span class="text-xs">Friends</span>
                 </a>
