--- a/investing.html
+++ b/investing.html
@@ -349,7 +349,7 @@
                     <span class="text-xs">Tasks</span>
                 </a>
                 <!-- Friends -->
-                <a href="friends.html" class="flex flex-col items-center text-black-600 hover:text-blue-500">
+                <a href="#" class="flex flex-col items-center text-black-600 hover:text-blue-500">
                    <i class="fas fa-user-friends text-xl"></i> <!-- Arrow up icon -->
                     <span class="text-xs">Friends</span>
                 </a>
