--- a/news.html
+++ b/news.html
@@ -175,7 +175,7 @@
                     <span class="text-xs">Friends</span>
                 </a>
                 <!-- News -->
-                <a href="news.html" class="flex flex-col items-center text-black-600 hover:text-blue-500">
+                <a href="news.html" class="flex flex-col items-center text-blue-600 hover:text-blue-500">
                     <i class="fas fa-newspaper text-xl"></i>
                     <span class="text-xs">News</span>
                 </a>
