--- a/tasks.html
+++ b/tasks.html
@@ -196,7 +196,7 @@
                     <span class="text-xs">Earnings</span>
                 </a>
                 <!-- Tasks -->
-                <a href="tasks.html" class="flex flex-col items-center text-black-600 hover:text-blue-500">
+                <a href="tasks.html" class="flex flex-col items-center text-blue-600 hover:text-blue-500">
                     <i class="fas fa-chart-line text-xl"></i>
                     <span class="text-xs">Tasks</span>
                 </a>
