--- a/tasks.html
+++ b/tasks.html
@@ -187,10 +187,8 @@
             <!-- recent transaction -->
 		 <div class="container py-4">
 	
-		<div class="ss-box ss-round ss-shadow"></div>
-		<script>
-			p{ color: #fff !important;}
-		</script>
+		<div class="ss-box ss-pill ss-shadow"></div>
+		
 		<script>			
 
 			function createNewShareBox(){
@@ -202,8 +200,7 @@
 			}
 
 		</script>
-
-	</div>
+                </div>
             <!-- Sticky Footer -->
         <footer class="bg-white shadow-inner w-full fixed bottom-0">
             <div class="flex justify-around py-2 border-t">
