--- a/tasks.html
+++ b/tasks.html
@@ -216,7 +216,7 @@
                 </a>
 
                 <!-- Earnings -->
-                <a href="dashboard.html" class="flex flex-col items-center text-blue-600 hover:text-blue-500">
+                <a href="dashboard.html" class="flex flex-col items-center text-black-600 hover:text-blue-500">
                     <i class="fas fa-dollar-sign text-xl"></i>
                     <span class="text-xs">Earnings</span>
                 </a>
