--- a/dashboard.html
+++ b/dashboard.html
@@ -239,6 +239,169 @@
             </div>
         </div>
         
+        <!-- watchlists -->
+        <!-- TradingView Widget BEGIN -->
+<div class="tradingview-widget-container">
+  <div class="tradingview-widget-container__widget"></div>
+  <div class="tradingview-widget-copyright"><a href="" rel="" target="_blank"><span class="blue-text">UNIV</span></a></div>
+  <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-market-overview.js" async>
+  {
+  "colorTheme": "light",
+  "dateRange": "1D",
+  "showChart": false,
+  "locale": "en",
+  "largeChartUrl": "",
+  "isTransparent": false,
+  "showSymbolLogo": true,
+  "showFloatingTooltip": false,
+  "width": "500",
+  "height": "600",
+  "tabs": [
+    {
+      "title": "Crypto",
+      "symbols": [
+        {
+          "s": "BITSTAMP:BTCUSD"
+        },
+        {
+          "s": "COINBASE:ETHUSD"
+        },
+        {
+          "s": "BITSTAMP:XRPUSD"
+        },
+        {
+          "s": "CRYPTO:BNBUSD"
+        },
+        {
+          "s": "BINANCE:SOLUSD"
+        },
+        {
+          "s": "COINBASE:DOGEUSD"
+        },
+        {
+          "s": "BINANCE:ADAUSD"
+        },
+        {
+          "s": "COINBASE:LTCUSD"
+        },
+        {
+          "s": "KRAKEN:WIFUSD"
+        },
+        {
+          "s": "BINANCE:DOGSUSDT"
+        },
+        {
+          "s": "OKX:XUSDT"
+        },
+        {
+          "s": "OKX:MAJORUSDT"
+        }
+      ]
+    },
+    {
+      "title": "Forex",
+      "symbols": [
+        {
+          "s": "FX:EURUSD"
+        },
+        {
+          "s": "FX:GBPUSD"
+        },
+        {
+          "s": "FX:USDJPY"
+        },
+        {
+          "s": "OANDA:GBPJPY"
+        },
+        {
+          "s": "FX:AUDUSD"
+        },
+        {
+          "s": "OANDA:USDCHF"
+        },
+        {
+          "s": "OANDA:EURJPY"
+        },
+        {
+          "s": "OANDA:NZDUSD"
+        },
+        {
+          "s": "FX:USDCAD"
+        },
+        {
+          "s": "OANDA:AUDJPY"
+        }
+      ],
+      "originalTitle": "Forex"
+    },
+    {
+      "title": "Stocks",
+      "symbols": [
+        {
+          "s": "NASDAQ:TSLA"
+        },
+        {
+          "s": "NASDAQ:NVDA"
+        },
+        {
+          "s": "NASDAQ:AAPL"
+        },
+        {
+          "s": "NASDAQ:AMZN"
+        },
+        {
+          "s": "NASDAQ:GOOGL"
+        },
+        {
+          "s": "NASDAQ:MSFT"
+        },
+        {
+          "s": "NASDAQ:META"
+        },
+        {
+          "s": "NASDAQ:NFLX"
+        },
+        {
+          "s": "NASDAQ:PYPL"
+        },
+        {
+          "s": "NYSE:SHOP"
+        }
+      ]
+    },
+    {
+      "title": "Indices",
+      "symbols": [
+        {
+          "s": "TVC:DXY"
+        },
+        {
+          "s": "SP:SPX"
+        },
+        {
+          "s": "TVC:VIX"
+        },
+        {
+          "s": "NSE:NIFTY"
+        },
+        {
+          "s": "FX:NAS100"
+        },
+        {
+          "s": "NSE:BANKNIFTY"
+        },
+        {
+          "s": "TVC:US02Y"
+        }
+      ],
+      "originalTitle": "Indices"
+    }
+  ]
+}
+  </script>
+</div>
+<!-- TradingView Widget END -->
+
         
         <!-- Watchlist Section -->
         <div class="bg-white rounded-lg p-4 shadow-md mb-10">
