--- a/dashboard.html
+++ b/dashboard.html
@@ -254,7 +254,7 @@
   "isTransparent": false,
   "showSymbolLogo": true,
   "showFloatingTooltip": false,
-  "width": "500",
+  "width": "350",
   "height": "600",
   "tabs": [
     {
@@ -403,55 +403,7 @@
 <!-- TradingView Widget END -->
 
         
-        <!-- Watchlist Section -->
-        <div class="bg-white rounded-lg p-4 shadow-md mb-10">
-            <table class="w-full">
-                <thead>
-                    <tr class="text-left text-gray-500 border-b">
-                        <th class="p-2">Coins</th>
-                        <th class="p-2">Performance stats</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <!-- Bitcoin Row -->
-                    <tr class="border-b">
-                        <td class="p-2 flex items-center">
-                            <i class="fab fa-bitcoin text-2xl text-orange-500 mr-2"></i>
-                            <p>Bitcoin (BTC)</p>
-                        </td>
-                        <td class="p-2">
-                            <p id="bitcoin-price" class="font-bold">Loading...</p>
-                            <p id="bitcoin-change" class="text-green-500">Loading...</p>
-                            <p id="bitcoin-difference" class="text-green-500">Loading...</p>
-                        </td>
-                    </tr>
-                    <!-- Ethereum Row -->
-                    <tr class="border-b">
-                        <td class="p-2 flex items-center">
-                            <i class="fab fa-ethereum text-2xl text-gray-500 mr-2"></i>
-                            <p>Ethereum (ETH)</p>
-                        </td>
-                        <td class="p-2">
-                            <p id="ethereum-price" class="font-bold">Loading...</p>
-                            <p id="ethereum-change" class="text-green-500">Loading...</p>
-                            <p id="ethereum-difference" class="text-green-500">Loading...</p>
-                        </td>
-                    </tr>
-                    <!-- Solana Row -->
-                    <tr>
-                        <td class="p-2 flex items-center">
-                            <i class="fas fa-coins text-2xl text-blue-500 mr-2"></i>
-                            <p>Solana (SOL)</p>
-                        </td>
-                        <td class="p-2">
-                            <p id="solana-price" class="font-bold">Loading...</p>
-                            <p id="solana-change" class="text-green-500">Loading...</p>
-                            <p id="solana-difference" class="text-green-500">Loading...</p>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+        <!-- Watchlist 
 
         </div>
 
