--- a/news.html
+++ b/news.html
@@ -114,13 +114,13 @@
         <!-- TradingView Widget BEGIN -->
 <div class="tradingview-widget-container">
   <div class="tradingview-widget-container__widget"></div>
-  <div class="tradingview-widget-copyright"><a href="https://www.tradingview.com/" rel="noopener nofollow" target="_blank"><span class="blue-text"></span></a></div>
+  <div class="tradingview-widget-copyright"><a href="" rel="" target="_blank"><span class="blue-text"></span></a></div>
   <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-timeline.js" async>
   {
   "feedMode": "all_symbols",
   "isTransparent": false,
   "displayMode": "regular",
-  "width": 355,
+  "width": 360,
   "height": 750,
   "colorTheme": "light",
   "locale": "en"
