--- a/mines.html
+++ b/mines.html
@@ -80,13 +80,13 @@
                     <span class="text-xs">Investing</span>
                 </a>
                 <!-- Mines Gambling -->
-                <a href="mines.html" class="flex flex-col items-center text-black-600 hover:text-blue-500">
+                <a href="mines.html" class="flex flex-col items-center text-blue-600 hover:text-blue-500">
                     <i class="fas fa-bomb text-xl"></i> <!-- Icon of a bomb to represent Mines Gambling -->
                     <span class="text-xs">Mines</span>
                 </a>
 
                 <!-- Earnings -->
-                <a href="dashboard.html" class="flex flex-col items-center text-blue-600 hover:text-blue-500">
+                <a href="dashboard.html" class="flex flex-col items-center text-black-600 hover:text-blue-500">
                     <i class="fas fa-dollar-sign text-xl"></i>
                     <span class="text-xs">Earnings</span>
                 </a>
