--- a/investing.html
+++ b/investing.html
@@ -328,7 +328,7 @@
         <footer class="bg-white shadow-inner w-full fixed bottom-0">
             <div class="flex justify-around py-2 border-t">
                 <!-- Investing -->
-                <a href="investing.html" class="flex flex-col items-center text-black-600 hover:text-blue-500">
+                <a href="investing.html" class="flex flex-col items-center text-blue-600 hover:text-blue-500">
                     <i class="fas fa-chart-line text-xl"></i>
                     <span class="text-xs">Investing</span>
                 </a>
@@ -339,7 +339,7 @@
                 </a>
 
                 <!-- Earnings -->
-                <a href="dashboard.html" class="flex flex-col items-center text-blue-600 hover:text-blue-500">
+                <a href="dashboard.html" class="flex flex-col items-center text-black-600 hover:text-blue-500">
                     <i class="fas fa-dollar-sign text-xl"></i>
                     <span class="text-xs">Earnings</span>
                 </a>
